[wip] user 적용